2010-05-23  Christopher Roy Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/util/prompt.jl: fix an unconfirmed compilation-error that has been reported

2010-05-16  Christopher Bratusek <zanghar@freenet.de>
	* src/display.c: allow compilation with -DDEBUG

	* man/news.texi: updated

2010-05-15  Teika Kazura <teika@lavabit.com>
	* man/news.texi: Added a link.

2010-05-11  Teika Kazura <teika@lavabit.com>
	* man/news.texi
	* man/sawfish.texi
	* src/display.c
	* src/events.c
	* src/functions.c
	* src/sawfish_subrs.h: Complets the last RandR edit. At least it's
	correct if you have only one screen, or if you use Xinerama.
	Most importantly, screen size information is updated after
	XRRScreenChangeNotifyEvent.
	Other changes:
	NULL display check of the RandR is changed to Sawfish conventional
	way. (Just to be in accordance.) Minor memeory leak fix.
	Doc.

	* ChangeLog
	* man/faq.texi
	* man/news.texi
	* man/sawfish.texi
	* KEYBINDINGS
	* src/keys.c: docs.

2010-04-27  Christopher Bratusek <zanghar@freenet.de>
	* configure.in: make xinerama an optional dependency
			-- [modified patch from Gentoo]

	* lisp/sawfish/wm/ext/apps-menu.jl: Allow whitespace and comments
	                                    at the beginning of .desktop files.
					    -- [Matthew Love, Teika Kazura]

	* src/Makefile.in
	* src/display.c
	* src/events.c: add a way to response to XRandR changed events
	                eg resolution changes via randr-change-notify-hook
			-- [Daniel M. German]

2010-04-06  Teika Kazura <teika@lavabit.com>
	* lisp/sawfish/wm/autoload.jl
	* lisp/sawfish/wm/commands.jl
	* lisp/sawfish/wm/util/gtkrc.jl
	* man/news.texi
	* man/sawfish.texi: Minor doc. News improvements. Minor typo fix.

	* lisp/sawfish/wm/ext/old-window-menu.jl: Utf8 support in
	old-window-menu.jl.

2010-03-20  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/tabs/tab.jl
	* lisp/sawfish/wm/tabs/tabgroup.jl: several additions, check man/news.texi [Fuchur]

	* man/news.texi: updated
