@@ -11,6 +11,15 @@ they occurred between. For more detailed information see the
 
 @heading 1.6.4 "Frozen Flame"
 
+@itemize @bullet
+
+@item New Features
+@itemize @minus
+@item Added border_with and border_color frame-part attributes
+[Alexey I. Froloff]
+@end itemize
+@end itemize
+
 @heading 1.6.3 "Hava Nagila"
 
 @itemize @bullet
