@@ -1,5 +1,10 @@
 2010-05-23  Christopher Roy Bratusek <zanghar@freenet.de>
-	* lisp/sawfish/wm/util/prompt.jl: fix an unconfirmed compilation-error that has been reported
+	* man/sawfish.texi
+	* src/events.c
+	* src/frames.c
+	* src/sawfish.h
+	* src/windows.c: added border_with and border_color frame-part attributes
+			 -- [Alexey I. Froloff]
 
 2010-05-16  Christopher Bratusek <zanghar@freenet.de>
 	* src/display.c: allow compilation with -DDEBUG
